concept.html 修正

--- a/concept.html
+++ b/concept.html
@@ -70,7 +70,7 @@
                             このCATCAFEは実在しませんが、野良猫・さくら猫は実際に北谷町の安良波公園に地域猫として実在します。<br>
                             このサイトを作ろうと思ったきっかけは、北谷に引っ越してきてから、安良波公園を散歩することが多くなり、たくさんの野良猫・さくら猫に出会いその現実を知ったからです。<br>
                             安良波公園は海沿いに道があり、家族連れやペットの散歩コースとして多くの人が利用しています。”猫は自由でいいな”
-                            なんて考えながら私も散歩していました。10匹以上の猫たちが住でおり、気がついたら増えていることもあります。野良猫にしてはきれいな猫も多いので迷い猫なのか捨て猫なのだと思います。もし捨てられたのだとしたら、誰かが拾ってくれるとは限りません。もともと飼われていた猫は自分で餌を取れないそうなのでゴミを漁るか人間から食べ物をもらわないと生きていけません。ネズミもたまに見かけるので環境がいいともいえません。以前、白い猫がいたのですが病気になってしまったのか、どんどん痩せていき、次の日から見ることはありませんでした。<br>
+                            なんて考えながら私も散歩していました。10匹以上の猫たちが住んでおり、気がついたら増えていることもあります。野良猫にしてはきれいな猫も多いので迷い猫なのか捨て猫なのだと思います。もし捨てられたのだとしたら、誰かが拾ってくれるとは限りません。もともと飼われていた猫は自分で餌を獲れないそうなのでゴミを漁るか人間から食べ物をもらわないと生きていけません。ネズミもたまに見かけるので環境がいいともいえません。以前、白い猫がいたのですが病気になってしまったのか、どんどん痩せていき、次の日から見ることはありませんでした。<br>
                             この現実を知り私は、”動物を捨てないでほしい”ということ、猫を飼おうかなと考えている方は”野良猫・さくら猫・譲渡会”なども検討してみてほしいということを伝えたいです。<br>
                             長くなりましたが最後まで読んでいただきありがとうございます。</p>
                     </div>
